--- a/TestData/List/makefile
+++ b/TestData/List/makefile
@@ -1,17 +1,17 @@
 #declare the variable
 CC=gcc
 FLAGS =-g -Wall
-INCLUDES = -I../Header
+INCLUDES = -I../../Header
 # define any directories containing header files other than /usr/include
-LIBS = -L../Implementation
+LIBS = -L../../Implementation
 #define any directories containing implementation of the files in INCLUDES
 #../../lib means up 2 level then search for /lib
 LFLAGS= -ldatastructure
 #to run all the .a file
 CFLAGS=-c $(FLAG)
-SRCS=test_stack.c
+SRCS=test.c
 OBJS= $(SRCS:.c=.o)
-EXECUTABLE=test_stack
+EXECUTABLE=test
 
 
 #  -g    adds debugging information to the executable file
